--- a/README
+++ b/README
@@ -1,10 +1,4 @@
-This is a work-in-progress implementation of Bitcoin in Google Go.
-
-	Package description:
--mymath			- package for various math operations and type conversions
--bitelliptic	- package for handling Koblitz ECDSA curves
--bitecdsa		- package for handling ECDSA algorithms that use the Koblitz curves
--bitmessage		- package for handling messages from the Bitcoin protocol
-
-	Code progress:
--Alpha version, some functionality still missing.
+This fork started with some updates to ThePiachu's original GoBit to
+make it work with Go version 1.  This fork is now *deprecated*.
+The elliptic curve math and some other Bitcoin utility functions
+are now part of the [btcutil package](https://github.com/mndrix/btcutil).
